# ITMO-LabWork4

./: CMakeLists.txt  main.cpp
Ham/: HammingArchive.cpp  HammingArchive.h
Ham/HamCore/: HamReader.cpp  HamReader.h  HamWriter.cpp  HamWriter.h
